# todo-app

./: .gitignore  pyproject.toml
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py
todo/: __init__.py  auth.py  db.py  schema.sql  todo.py
todo/templates/: base.html
todo/templates/auth/: login.html  register.html
