[project]
name = "todo"
version ="1.0.0"
description = "A app for tracking tasks built in todo app"
dependencies = [
	"flask",
]
[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths =["tests"]

[tool.coverage.run]
branch =true
source = ["todo"]
